# volbx

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.eible  CMakeLists.txt.quazip  CMakeLists.txt.qwt  CMakeLists.txt.qwtble  CMakeLists.txt.wble  CMakeLists.txt.zlib  EibleConfig.cmake  QwtbleConfig.cmake  README.md  UnitTests.pro  Update.pro  Volbx.pro  WbleConfig.cmake  license_QT.txt  sonar-project.properties  style.astylerc
Common/: CMakeLists.txt  ColumnTag.h  Configuration.cpp  Configuration.h  Constants.cpp  Constants.h  DatasetUtilities.cpp  DatasetUtilities.h  ExportData.cpp  ExportData.h  ExportImage.cpp  ExportImage.h  ExportUtilities.cpp  ExportUtilities.h  FileUtilities.cpp  FileUtilities.h  Formats.h  PlotData.cpp  PlotData.h  ProgressBar.cpp  ProgressBar.h  Quantiles.cpp  Quantiles.h  SpecialColumns.h  TimeLogger.cpp  TimeLogger.h
Datasets/: CMakeLists.txt  Dataset.cpp  Dataset.h  DatasetDefinition.cpp  DatasetDefinition.h  DatasetDefinitionInner.cpp  DatasetDefinitionInner.h  DatasetDefinitionOds.cpp  DatasetDefinitionOds.h  DatasetDefinitionSpreadsheet.cpp  DatasetDefinitionSpreadsheet.h  DatasetDefinitionXlsx.cpp  DatasetDefinitionXlsx.h  DatasetInner.cpp  DatasetInner.h  DatasetOds.cpp  DatasetOds.h  DatasetSpreadsheet.cpp  DatasetSpreadsheet.h  DatasetXlsx.cpp  DatasetXlsx.h
ModelsAndViews/: CMakeLists.txt  DataView.cpp  DataView.h  DateDelegate.cpp  DateDelegate.h  FilteringProxyModel.cpp  FilteringProxyModel.h  NumericDelegate.cpp  NumericDelegate.h  PlotDataProvider.cpp  PlotDataProvider.h  TableModel.cpp  TableModel.h  TransactionData.cpp  TransactionData.h
Shared/: Application.cpp  Application.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  CommonProperties.h  Debugging.h  Logger.cpp  Logger.h  LoggerCheckBox.h  Networking.cpp  Networking.h  logtype.h
Tests/: CMakeLists.txt  Common.cpp  Common.h  ConfigurationTest.cpp  ConfigurationTest.h  ConstantsTest.cpp  ConstantsTest.h  DatasetCommon.cpp  DatasetCommon.h  DatasetDummy.cpp  DatasetDummy.h  DatasetTest.cpp  DatasetTest.h  DatasetVisualizationTest.cpp  DatasetVisualizationTest.h  DetailedSpreadsheetsTest.cpp  DetailedSpreadsheetsTest.h  FilteringProxyModelTest.cpp  FilteringProxyModelTest.h  InnerTests.cpp  InnerTests.h  PlotDataProviderTest.cpp  PlotDataProviderTest.h  SpreadsheetsTest.cpp  SpreadsheetsTest.h  Tests.cpp  testResources.qrc
Tests/TestFiles/Data/: ExampleData.vbx  ExampleDataPartial.vbx  ExampleData_DefinitionDump.txt  ExampleData_tsvDump.txt  po0_DefinitionDump.txt  po0_dmg.vbx  po0_dmg_DefinitionDump.txt  po0_dmg_tsvDump.txt  po0_tsvDump.txt  po1.vbx  po1_DefinitionDump.txt  pustePola.vbx  pustePola_DefinitionDump.txt  pustePola_tsvDump.txt
Tests/TestFiles/TestSpreadsheets/: HistVsNormal.ods  HistVsNormal.ods_DefinitionDump.txt  import1.ods  import1.ods_tsvDump.txt  import2.xlsx_tsvDump.txt  import3.ods  test.xlsx_DefinitionDump.txt  test01.xlsx  test01Partial.ods  test01Partial.xlsx  test03.ods_tsvDump.txt  test03.xlsx  test04.ods  test04.ods_DefinitionDump.txt  test04.xlsx  test04.xlsx_tsvDump.txt  test2.xlsx  testDataWithPlot.ods_DefinitionDump.txt  testDataWithPlot.xlsx  testDataWithPlot.xlsx_tsvDump.txt  testFileData.ods_tsvDump.txt  testFileData.xlsx  testFileData.xlsx_DefinitionDump.txt
UnitTests/: CMakeLists.txt  Common.h  ConstantsTest.cpp  ConstantsTest.h  InnerTests.cpp  InnerTests.h  SpreadsheetsTest.cpp  SpreadsheetsTest.h  Tests.cpp
UnitTests/TestFiles/: config
UnitTests/TestFiles/Data/: po0.vbx  po0_dmg.vbx  po0_dmg2_bez_dat.vbx  po0_dmg2_bez_dat_DefinitionDump.txt  po1_tsvDump.txt
Update/: CMakeLists.txt  Update.cpp  Update.h  Update.ui  UpdateProperties.h  main.cpp
src/Common/: CMakeLists.txt  ColumnTag.h  Configuration.cpp  Configuration.h  Constants.cpp  Constants.h  DatasetUtilities.cpp  DatasetUtilities.h  FileUtilities.cpp  FileUtilities.h  TimeLogger.cpp  TimeLogger.h
src/Datasets/: CMakeLists.txt  Dataset.cpp  Dataset.h  DatasetInner.cpp  DatasetInner.h  DatasetOds.cpp  DatasetOds.h  DatasetSpreadsheet.cpp  DatasetSpreadsheet.h  DatasetXlsx.cpp  DatasetXlsx.h
src/GUI/: About.cpp  About.h  About.ui  CMakeLists.txt  CheckUpdates.cpp  CheckUpdates.h  CheckUpdates.ui  DataViewDock.cpp  DataViewDock.h  Dock.cpp  Dock.h  DockTitleBar.cpp  DockTitleBar.h  Export.cpp  Export.h  FiltersDock.cpp  FiltersDock.h  PlotDock.cpp  PlotDock.h  SaveDatasetAs.cpp  SaveDatasetAs.h  Tab.cpp  Tab.h  TabBar.cpp  TabBar.h  TabWidget.cpp  TabWidget.h  VolbxMain.cpp  VolbxMain.h  VolbxMain.ui
src/Import/: CMakeLists.txt  ColumnsPreview.cpp  ColumnsPreview.h  DatasetImportTab.cpp  DatasetImportTab.h  DatasetVisualization.cpp  DatasetVisualization.h  DatasetsListBrowser.cpp  DatasetsListBrowser.h  DatasetsListBrowser.ui  ImportData.cpp  ImportData.h  ImportTab.cpp  ImportTab.h  SpreadsheetsImportTab.cpp  SpreadsheetsImportTab.h  SpreadsheetsImportTab.ui
src/ModelsAndViews/: CMakeLists.txt  DataView.cpp  DataView.h  DateDelegate.cpp  DateDelegate.h  FilteringProxyModel.cpp  FilteringProxyModel.h  NumericDelegate.cpp  NumericDelegate.h  PlotDataProvider.cpp  PlotDataProvider.h  TableModel.cpp  TableModel.h  TransactionData.h
src/Shared/: Application.cpp  Application.h  CMakeLists.txt  CommonProperties.h  LogType.h  Logger.cpp  Logger.h  LoggerCheckBox.cpp  LoggerCheckBox.h  Networking.cpp  Networking.h
src/Update/: CMakeLists.txt  Update.cpp  Update.h  UpdateProperties.h  UpdateProperties.rc  main.cpp
tests/: CMakeLists.txt  Common.cpp  Common.h  ConstantsTest.cpp  ConstantsTest.h  DatasetCommon.h  DatasetDummy.h  DatasetTest.cpp  DatasetTest.h  DatasetVisualizationTest.cpp  DetailedSpreadsheetsTest.cpp  InnerTests.cpp  PlotDataProviderTest.h  SpreadsheetsTest.cpp  Tests.cpp
tests/TestFiles/Data/: ExampleData.vbx  ExampleDataPartial.vbx  ExampleData_DefinitionDump.txt  po0.vbx  po0_DefinitionDump.txt  po0_dmg2_bez_dat.vbx  po0_dmg2_bez_dat_DefinitionDump.txt  po0_dmg2_bez_dat_tsvDump.txt  po1.vbx  po1_tsvDump.txt  pustePola_tsvDump.txt
tests/TestFiles/TestSpreadsheets/: excel.ods  import1.ods_DefinitionDump.txt  import3.xlsx  import3.xlsx_tsvDump.txt  (+14 more)
(+222 files in other folders)
